src/widgets/snapshots/timr_tui__widgets__footer_test__menu_time_format_hh_12_mm.snap
---
source: src/widgets/footer_test.rs
expression: t.backend()
---
" m hide menu ────────────────────────────────────────────────────────────────────────────────────────────────── 2:30 PM "
" screens      1 countdown   2 timer   3 pomodoro   4 event   5 local time   ← or → switch screens                       "
" appearance   , change style   . toggle deciseconds   : toggle local time                                               "
" controls     space start   e edit   ^e edit by local time   r reset clock                                              "
"                                                                                                                        "
"                                                                                                                        "
